--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@coreui/coreui-free-react-admin-template",
+  "name": "admin-dashboard",
   "version": "4.5.0",
   "description": "Admin dashboard",
-  "homepage": "http://rmeshram.github.io/admin-dashboard",
+  "homepage": "http://rmeshram.github.io/admin-dashboard/",
   "bugs": {
-    "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
+    "url": "test"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:coreui/coreui-free-react-admin-template.git"
+    "url": "git@github.com:coreui/admin-dashboard.git"
   },
   "license": "MIT",
   "author": "The CoreUI Team (https://github.com/orgs/coreui/people)",
